--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             type: 'column',
             options3d:
             {
-                enabled: true,
+                enabled: false,
                 alpha: 10,
                 beta: 10,
                 depth: 100,
